fix image size on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -353,6 +353,9 @@ footer {
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
     }
+    #blog_image {
+        width: 300px
+    }
 
 
 }
